# ai-chat

./: .env.example  .gitignore  .ruff.toml  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
config/: domains.yaml  llm.yaml
config/prompts/: .gitkeep
docker/: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  env.docker.example
docker/postgres/: init.sql
mcp_servers/rag/: __init__.py  __main__.py  logging.py  reranker.py  schemas.py  search.py  server.py  tools.py
scripts/: __init__.py  ingest.py  init_db.py  run_api.py  seed_domains.py
src/: __init__.py
src/api/: __init__.py  deps.py  main.py  middleware.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/db/: __init__.py  base.py  engine.py  session.py
src/graph/: __init__.py  builder.py  checkpointer.py  edges.py  prompts.py  state.py  templates.py
src/llm/: __init__.py  config.py  exceptions.py  provider.py  utils.py
src/mcp_client/: __init__.py  manager.py
src/repositories/: __init__.py  base.py  chunk_repository.py  conversation_repository.py  domain_repository.py  job_repository.py  protocols.py  unit_of_work.py
src/services/: __init__.py  chat_service.py  rag_service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_chat_service.py  test_db_connection.py  test_ingest_service.py  test_rag_service.py  test_repositories.py  test_subagents_flow.py  test_websocket.py
tests/mocks/: __init__.py  llm_mock.py  mcp_mock.py
tests/unit/: __init__.py  test_chunker.py  test_domains.py  test_google_doc_loader.py  test_graph_edges.py  test_graph_nodes.py  test_graph_state.py  test_health.py  test_html_parser.py  test_hybrid_merge.py  test_llm_provider.py  test_mcp_client.py  test_mock_client.py  test_models.py  test_schemas.py  test_subagents.py  test_timeline.py
ui/: __init__.py  api_client.py  app.py  config.py  session.py
ui/components/: __init__.py  chat.py  progress.py  sidebar.py  timeline.py
ui/mock/: __init__.py  mock_client.py
(+44 files in other folders)
